--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <body>
 
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
 <!--Brady’s Section-->
 <table class=“table”>
     <thead>
@@ -30,9 +31,11 @@
     </thread>
        <tbody id=“eTable”>
    </table>
+</div>
+</div>
 
-
-
+<div class="row">
+        <div class="col-md-12">
 <form> <!-- Stil WIP, I'm working on finding a date input field -->
     <div class="row">
       <div class="col">
@@ -44,9 +47,13 @@
       </div>
     
 </form>
-
-
-
+</div>
+</div>
+</div>
+<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+<script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
+
+
