--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <input type="text" class="form-control" placeholder="Employee Role" class="input-field" class="input-field" style="width: 400px; margin: 10px">
         <input type="text" class="form-control" placeholder="Start Date" class="input-field" class="input-field" style="width: 400px; margin: 10px">
         <input type="text" class="form-control" placeholder="Employee Rate" class="input-field" class="input-field" style="width: 400px; margin: 10px">
-        <button type="submit" class="btn btn-primary" style="margin: 10px;">Submit</button>
+        <button type="submit" class="btn btn-primary" style="margin: 10px;" id="sumbit">Submit</button>
       </div>
     
 </form>
