--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <form> <!-- Stil WIP, I'm working on finding a date input field -->
     <div class="row">
       <div class="col">
-        <input type="text" class="form-control" placeholder="Employee Name" class="input-field" style="width: 400px; margin: 10px">
-        <input type="text" class="form-control" placeholder="Employee Role" class="input-field" class="input-field" style="width: 400px; margin: 10px">
-        <input type="text" class="form-control" placeholder="Start Date" class="input-field" class="input-field" style="width: 400px; margin: 10px">
-        <input type="text" class="form-control" placeholder="Employee Rate" class="input-field" class="input-field" style="width: 400px; margin: 10px">
-        <button type="submit" class="btn btn-primary" style="margin: 10px;" id="sumbit">Submit</button>
+        <input type="text" class="form-control" placeholder="Employee Name" class="input-field" id="nameSubmit" style="width: 400px; margin: 10px">
+        <input type="text" class="form-control" placeholder="Employee Role" class="input-field" class="input-field" id="roleSubmit" style="width: 400px; margin: 10px">
+        <input type="text" class="form-control" placeholder="Start Date" class="input-field" class="input-field" id="dateSubmit" style="width: 400px; margin: 10px">
+        <input type="text" class="form-control" placeholder="Employee Rate" class="input-field" class="input-field" id="rateSubmit" style="width: 400px; margin: 10px">
+        <button type="submit" class="btn btn-primary" style="margin: 10px;" id="submit">Submit</button>
       </div>
     
 </form>
