--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 </div>
 </div>
 
+<div id=“BTable”></div>
+
 <div class="row">
         <div class="col-md-12">
 <form> <!-- Stil WIP, I'm working on finding a date input field -->
