--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <th scope=“col”>Total Earnings</th>
            </tr>
     </thread>
-       <tbody id=“eTable”>
+       <tbody id=“eTable”></tbody>
    </table>
 </div>
 </div>
