--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <div class="col-2">
         Total Earnings
       </div>
+      </div>
 
       <div class="row">
         <div class="col-2" id="eName">
@@ -65,7 +66,7 @@
 
         </div>
 
-        <div class="col-2" id- "eRate">
+        <div class="col-2" id="eRate">
 
         </div>
 
