--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     </div>
   </div>
   <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <script src="assets/javascript/app.js"></script>
 </body>
 
